# math_timeline

./: .gitignore  Cargo.toml  LICENSE  README.md  asset-manifest.json  diesel.toml  index.html  package-lock.json  package.json
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/public/locales/ca/: translation.json
client/public/locales/en/: translation.json
client/public/locales/es/: translation.json
client/src/: App.js  index.js  styles.css
locales/ca/: translation.json
locales/en/: translation.json
locales/es/: translation.json
migrations/2023-06-24-154026_branches/: down.sql  up.sql
public/: index.html
public/locales/ca/: translation.json
public/locales/en/: translation.json
public/locales/es/: translation.json
src/: App.js  App.jsx  apollo.js  db.js  i18n.js  index.js  lib.rs  models.rs  schema.rs  styles.css
src/branches/: first.json
src/components/: account.jsx  ageSelector.jsx  basicUI.jsx  branches.jsx  notFound.jsx
src/hooks/: useTheme.js
static/css/: main.a0b7ae15.css  main.a0b7ae15.css.map  main.a8e1cc8b.css  main.a8e1cc8b.css.map
static/js/: main.0240940a.js  main.0240940a.js.map  main.2421d4cc.js  main.2421d4cc.js.LICENSE.txt  main.2421d4cc.js.map  main.25beb68d.js  main.25beb68d.js.map  main.480f46b3.js  main.480f46b3.js.LICENSE.txt  main.480f46b3.js.map  main.e39c16bb.js  main.e39c16bb.js.map  main.e45c8f36.js  main.e45c8f36.js.LICENSE.txt  main.e45c8f36.js.map  main.f18e967f.js  main.f18e967f.js.map
